--- a/templates/Index.html
+++ b/templates/Index.html
@@ -100,7 +100,7 @@
         <div class="feature">
           <div class="icon">*</div>
           <div class="text">
-            <h2>Normativa</h2>
+            <h2>Normativas</h2>
             <p>Colombia ha puesto en marcha mecanismos normativos y estratégicos para sentar las bases de la energía
               nuclear en el país.</p>
           </div>
